Fix: Scroll icon alignment and migrate to vanilla JS from jquery on front

--- a/assets/scup-front.css
+++ b/assets/scup-front.css
@@ -1,9 +1,20 @@
 #scUPscroller {
     position: fixed;
     border: none;
-    display: none;
     cursor: pointer;
     z-index: 999999 !important;
-    opacity: 0.6;
     border-radius: 2px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    visibility: hidden;
+    pointer-events: none;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+#scUPscroller.active {
+    opacity: 0.6;
+    visibility: visible;
+    pointer-events: auto;
 }
